# 2irr10-autonomous-digital-twinning

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
nitrobot_src/maps/: map.pgm  map.yaml
nitrobot_src/nitrobot_mediator/: package.xml  setup.cfg
nitrobot_src/nitrobot_mediator/nitrobot_mediator/: nitrobot_mediator_node.py  nitrobot_mediator_node.py.orig
nitrobot_src/nitrobot_sim/: package.xml  setup.cfg  setup.py
nitrobot_src/nitrobot_sim/config/: nitrobot.rviz
nitrobot_src/nitrobot_sim/launch/: sim.launch.py
nitrobot_src/nitrobot_sim/nitrobot_sim/: autonomous_decision.py  status_node.py  zone_state_node.py
nitrobot_src/nitrobot_world/: CMakeLists.txt
nitrobot_src/nitrobot_world/maps/: map.yaml
scripts/: run-sim.sh  rviz.sh  teleop.sh
src/ my_tb3_world/: CMakeLists.txt  package.xml
src/nitrobot_bringup/: CMakeLists.txt  package.xml
src/nitrobot_bringup/launch/: bringup.launch.py  physical_system.launch.py  twin_system.launch.py
src/nitrobot_decision/: package.xml  setup.cfg  setup.py
src/nitrobot_decision/launch/: decision.launch.py
src/nitrobot_decision/nitrobot_decision/: nitrobot_decision_node.py
src/nitrobot_decision/scripts/: set_zone.sh
src/nitrobot_mediator/: package.xml  setup.py
src/nitrobot_mediator/config/: zones.yaml
src/nitrobot_mediator/launch/: mediator.launch.py  mediator_twin.launch.py
src/nitrobot_mediator/nitrobot_mediator/: nitrobot_mediator_node.py  zone_registry.py
src/nitrobot_real/: CMakeLists.txt  package.xml
src/nitrobot_real/config/: nav2_burger_real.yaml  turtlebot3_real_frames.yaml
src/nitrobot_real/launch/: real.launch.py
src/nitrobot_real/rviz/: real_nav.rviz
src/nitrobot_real/scripts/: real_teleop.sh
src/nitrobot_sim/: CMakeLists.txt  package.xml
src/nitrobot_sim/config/: mission.yaml  nav2_burger_sim.yaml  turtlebot3_burger_sim_bridge.yaml  zone_poses.yaml
src/nitrobot_sim/env-hooks/: extend_turtlebot3_ws.sh.in
src/nitrobot_sim/launch/: mission.launch.py  namespaced_nav2.launch.py  nav2.launch.py  rviz.launch.py  sim.launch.py  sim_full.launch.py  sim_nav.launch.py  spawn.launch.py
src/nitrobot_sim/maps/: map.pgm  map.yaml
src/nitrobot_sim/rviz/: sim_nav.rviz
src/nitrobot_sim/scripts/: generate_map_from_world.py  mission_executor.py  sim_teleop.sh
src/nitrobot_sim/worlds/: farm_world.world
src/nitrobot_twin/: package.xml  setup.cfg  setup.py
src/nitrobot_twin/nitrobot_twin/: cmd_vel_bridge.py  go_to_zone.py
src/nitrobot_world/: CMakeLists.txt  package.xml
src/nitrobot_world/launch/: farm_world.launch.py  nitrobot_bringup.launch.py  real_robot_bridge.launch.py
src/nitrobot_world/maps/: map.yaml
src/nitrobot_world/worlds/: farm_world.world
