<?xml version="1.0"?>
<package format="3">
  <name>nitrobot_sim</name>
  <version>0.0.1</version>
  <description>Nitrobot farm simulation: zone state, autonomous decision, status</description>
  <maintainer email="mia@tue.nl">mia</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>