<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nitrobot_bringup</name>
  <version>0.0.0</version>
  <description>Launch NitroBot simulation, real Nav2, decision, and mediator together</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nitrobot_sim</exec_depend>
  <exec_depend>nitrobot_real</exec_depend>
  <exec_depend>nitrobot_decision</exec_depend>
  <exec_depend>nitrobot_mediator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
