<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nitrobot_bringup</name>
  <version>0.0.0</version>
  <description>Launch simulation and digital-twin stack together</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nitrobot_sim</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nitrobot_decision</exec_depend>
  <exec_depend>nitrobot_mediator</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
